updated auth feature added chat feature

--- a/development.env
+++ b/development.env
@@ -1,8 +1,14 @@
 SERVER_PORT=5900
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_USER=root
-DB_PASS=""
+DB_HOST=db-mysql-rate-rental-do-user-10637946-0.b.db.ondigitalocean.com
+DB_PORT=25060
+DB_USER=doadmin
+DB_PASS=AVNS_yfoQtKu5f9kVS8dF2lW
 DB_NAME=raterental
 JWT_KEY=AEEF740236AAB9CB
 REDIS_URL=redis://localhost:6379
+BASE_URL=http://localhost:5900
+MAILGUN_DOMAIN=mail.frontendlabs.co.uk
+MAILGUN_API_KEY=748e7011d54cc208de15c2e25a86660e-db4df449-516df7ee
+CLOUDINARY_NAME=dpopi8ra2
+CLOUDINARY_APIKEY=229672488853396
+CLOUDINARY_SECRET=nSsJrcagXxjTPctdN34TVuSeBFw
